2007-12-22 tchize
Add some dialog entries to sigmund, add a password to access scorn (forces newbies in training). No way back to newbie house aftre quitting it, forced into scorn.

    start/newbieshouse
    start/Nexus
    start/sigmund.msg



2007-12-18 tchize
M    python/misc/npc_dialog.py
M    python/CFDialog.py
M    start/newbieshouse
A    start/sigmund.msg
Update match rules of CFDialog, add a script to use it
easily in maps, update newbie house so the wise sigmund
can provide more interactive support to players


2007-11-05 01:50  rjtanner

	* azumauindo/minatomachi/ketsueki_itsuryuu/ground,
	  azumauindo/suno-yamatoshi/nenshou_youso/ground,
	  azumauindo/zaseki_dzuki_ryoku/ground, brest/black_shield/ground,
	  darcap/darcap/guilds/poisoned_dagger/ground,
	  darcap/darcap/guilds/smoking_cauldron/ground,
	  navar_city/dreaming_sage/ground,
	  pup_land/guilds/laughing_skull/ground,
	  pup_land/guilds/purple_butterfly/ground,
	  santo_dominion/guilds/drunken_barbarian/ground,
	  scorn/guilds/mailed_fist/ground,
	  wolfsburg/guilds/damned_heretics/ground: Update the guild maps to
	  include map difficulty levels, ability to create an altar of
	  valkyrie for 5 holy_shield, and altars are now level 120 (players
	  are no longer able to reconsecrate them) which addresses bug
	  [1824769] Players able to reconsecrate guild altars

2007-11-05 01:25  rjtanner

	* templates/guild/basement, templates/guild/bigchest,
	  templates/guild/guild_alchemy, templates/guild/guild_hq,
	  templates/guild/guild_toolshed, templates/guild/guildman_lounge,
	  templates/guild/guildmaster_lounge,
	  templates/guild/hallofjoining, templates/guild/journeyman_lounge,
	  templates/guild/masters_lounge, templates/guild/novice_lounge,
	  templates/guild/secondfloor: Update the guild template to include
	  map difficulty levels, entrance xy coordinates, ability to create
	  an altar of valkyrie for 5 holy_shield, altars are now level 120